--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,100 @@
   src: url("../fonts/roboto-serif-v15-latin-700.woff2") format("woff2");
   /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
+/*!
+ * Hamburgers
+ * @description Tasty CSS-animated hamburgers
+ * @author Jonathan Suh @jonsuh
+ * @site https://jonsuh.com/hamburgers
+ * @link https://github.com/jonsuh/hamburgers
+ */
+.hamburger {
+  display: inline-block;
+  cursor: pointer;
+  transition-property: opacity, filter;
+  transition-duration: 0.15s;
+  transition-timing-function: linear;
+  font: inherit;
+  color: inherit;
+  text-transform: none;
+  background-color: transparent;
+  border: 0;
+  margin: 0;
+  overflow: visible;
+}
+.hamburger:hover {
+  opacity: 0.7;
+}
+.hamburger.is-active:hover {
+  opacity: 0.7;
+}
+.hamburger.is-active .hamburger-inner,
+.hamburger.is-active .hamburger-inner::before,
+.hamburger.is-active .hamburger-inner::after {
+  background-color: #000;
+}
+
+.hamburger-box {
+  width: 30px;
+  height: 24px;
+  display: inline-block;
+  position: relative;
+}
+
+.hamburger-inner {
+  display: block;
+  top: 50%;
+}
+.hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
+  width: 30px;
+  height: 4px;
+  background-color: #000;
+  border-radius: 4px;
+  position: absolute;
+  transition-property: transform;
+  transition-duration: 0.15s;
+  transition-timing-function: ease;
+}
+.hamburger-inner::before, .hamburger-inner::after {
+  content: "";
+  display: block;
+}
+.hamburger-inner::before {
+  top: -10px;
+}
+.hamburger-inner::after {
+  bottom: -10px;
+}
+
+/*
+   * Squeeze
+   */
+.hamburger--squeeze .hamburger-inner {
+  transition-duration: 0.075s;
+  transition-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+}
+.hamburger--squeeze .hamburger-inner::before {
+  transition: top 0.075s 0.12s ease, opacity 0.075s ease;
+}
+.hamburger--squeeze .hamburger-inner::after {
+  transition: bottom 0.075s 0.12s ease, transform 0.075s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+}
+.hamburger--squeeze.is-active .hamburger-inner {
+  transform: rotate(45deg);
+  transition-delay: 0.12s;
+  transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+.hamburger--squeeze.is-active .hamburger-inner::before {
+  top: 0;
+  opacity: 0;
+  transition: top 0.075s ease, opacity 0.075s 0.12s ease;
+}
+.hamburger--squeeze.is-active .hamburger-inner::after {
+  bottom: 0;
+  transform: rotate(-90deg);
+  transition: bottom 0.075s ease, transform 0.075s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+
 :root {
   --text-color: rgba(12, 12, 12, 0.9);
   --white-color: #FBFBFB;
@@ -178,8 +272,29 @@ header .logo img {
   font-size: 1.125rem;
 }
 
+/*hamburger*/
 .hamburger {
   display: none;
+  width: 47px;
+  height: 47px;
+  border: none;
+  background: transparent;
+  position: relative;
+}
+
+.hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
+  width: 19px;
+  height: 3px;
+}
+
+.hamburger-inner {
+  top: 60%;
+}
+.hamburger-inner::before {
+  top: -8px;
+}
+.hamburger-inner::after {
+  bottom: -8px;
 }
 
 /*First*/
@@ -1322,7 +1437,21 @@ footer a:hover, footer a:active {
     scale: 0.8;
   }
 }
-/*---------------------*/
+/*Mobbile menu*/
+@media screen and (max-width: 836px) {
+  .main-menu {
+    display: none;
+  }
+
+  .hamburger {
+    display: inline-block;
+  }
+
+  .buttons-block {
+    display: flex;
+    gap: 20px;
+  }
+}
 .page-shadow {
   position: fixed;
   left: 0;
@@ -1347,6 +1476,10 @@ footer a:hover, footer a:active {
   z-index: 1000;
   transition: all 0.5s ease;
 }
+.mobile-panel .logo {
+  scale: 0.8;
+  padding-top: 10px;
+}
 
 .open-mobile-menu .page-shadow {
   opacity: 1;
@@ -1357,14 +1490,11 @@ footer a:hover, footer a:active {
 }
 
 .mobile-menu ul {
-  border-top: 1px solid var(--gray);
-}
-.mobile-menu ul li {
-  border-bottom: 1px solid var(--gray);
+  padding-top: 20px;
 }
 .mobile-menu ul li a {
   display: inline-block;
-  padding: 10px 20px;
-  color: var(--gray);
+  padding: 10px 30px;
+  color: var(--dark-grey);
   width: 100%;
 }
