--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,4 +1,5 @@
 @import "fonts.scss";
+@import "hamburgers.scss";
 
 :root {
     --text-color: rgba(12, 12, 12, 0.9);
@@ -141,8 +142,29 @@ header {
 	}
 }
 
+/*hamburger*/
 .hamburger {
 	display: none;
+	width: 47px;
+	height: 47px;
+	border: none;
+	background: transparent;
+	position: relative;
+}
+
+.hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
+    width: 19px;
+    height: 3px;
+}
+
+.hamburger-inner {
+    top: 60%;
+	&::before {
+		top: -8px;
+	}
+	&::after {
+		bottom: -8px;
+	}
 }
 
 /*First*/
@@ -1348,11 +1370,21 @@ hgroup {
 	}
 }
 
+/*Mobbile menu*/
+@media screen and (max-width: 836px) {
+	.main-menu {
+		display: none;
+	}
+	.hamburger {
+		display: inline-block;
+	}
 
-/*---------------------*/
-@media screen and (max-width: 820px) {
-
+	.buttons-block {
+		display: flex;
+		gap: 20px;
+	}
 }
+
 .page-shadow {
 	position: fixed;
 	left: 0;
@@ -1376,6 +1408,10 @@ hgroup {
 	height: 100vh;
 	z-index: 1000;
 	transition: all .5s ease;
+	.logo {
+		scale: .8;
+		padding-top: 10px;
+	}
 }
 
 .open-mobile-menu {
@@ -1390,13 +1426,13 @@ hgroup {
 
 .mobile-menu {
 	ul {
-		border-top: 1px solid var(--gray);
+		padding-top: 20px;
 		li {
-			border-bottom: 1px solid var(--gray);
+
 			a {
 				display: inline-block;
-				padding: 10px 20px;
-				color: var(--gray);
+				padding: 10px 30px;
+				color: var(--dark-grey);
 				width: 100%;
 			}
 		}
