--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,177 +1,22 @@
 @import "fonts.scss";
 @import "hamburgers.scss";
-
-:root {
-    --text-color: rgba(12, 12, 12, 0.9);
-	--white-color: #FBFBFB;
-	--black-color: #0C0C0C;
-	--green-color: #64CCC5;
-	--orange-color: #ffd930;
-	--grey-color: #f4f4f4;
-	--dark-orange: #ff9e30;
-	--dark-grey: #808080;
-}
-
-*, *::after, *::before {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-body {
-	color: var(--text-color);
-	font-family: "DM Sans", sans-serif;
-	font-size: 1.125rem;
-	letter-spacing: 0.03375rem;
-}
-
-.container {
-	width: min(90%, 1400px);
-	margin-inline: auto;
-}
-
-ul {
-	list-style-type: none;
-}
-
-a {
-	text-decoration: none;
-}
-
-img {
-	width: 100%;
-	object-fit: contain;
-	vertical-align: top;
-}
-
-.btn {
-	display: inline-block;
-	color: var(--text-color);
-	font-family: "DM Sans", sans-serif;
-	font-size: 1.25rem;
-	letter-spacing: 0.03375rem;
-	padding: 9px 15px;
-	border-radius: 23px;
-	background-color: var(--white-color);
-	cursor: pointer;
-	overflow: hidden;
-	z-index: 1;
-	position: relative;
-	transition: all .3s;
-	border: 2px solid var(--white-color);
-	&::after {
-		content: '';
-		position: absolute;
-		bottom: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		background-color: var(--white-color);
-		border-radius: 10rem;
-		z-index: -2;
-	}
-	&::before {
-		content: '';
-		position: absolute;
-		bottom: 0;
-		left: 0;
-		width: 0%;
-		height: 100%;
-		background-color: var(--orange-color);
-		transition: all .3s;
-		border-radius: 10rem;
-		z-index: -1;
-  	}
-  	&:hover::before {
-      width: 100%;
-    }
-	&:active::before {
-		background-color: var(--dark-orange);
-	}
-}
+@import "footer.scss";
+@import "defaults.scss";
+@import "gallery.scss";
 
 /*Header*/
 
 header {
-	padding-top: 21px;
 	background-color: var(--black-color);
-	.container {
-		display: flex;
-		justify-content: space-between;
-		margin-inline: auto;
-	}
-	.logo img {
-		height: 100%;
-	}
 }
 
 .main-menu ul {
-	display: flex;
-	gap: 40px;
-	padding: 17px 0;
 	a, a:visited, :active {
 		color: var(--white-color);
-		position: relative;
-		display: inline-block;
-		&::after {
-			content: '';
-			position: absolute;
-			width: 0;
-			height: 2px;
-			background: var(--orange-color);
-			bottom: -5px;
-			left: 50%;
-			display: inline-block;
-			transition: all .3s ease;
-			transform: translateX(-50%);
-		}
-		&:hover::after {
-			width: calc(100% - 10px);
-	   }
-	}
-	li a.current {
-		color: var(--green-color);
-	}
-}
-
-.buttons-block {
-	margin-right: 6px;
-	margin-top: 5px;
-	.btn {
-		font-size: 1.125rem;
-	}
-}
-
-/*hamburger*/
-.hamburger {
-	display: none;
-	width: 47px;
-	height: 47px;
-	border: none;
-	background: transparent;
-	position: relative;
-}
-
-.hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
-    width: 19px;
-    height: 3px;
-}
-
-.hamburger-inner {
-    top: 60%;
-	&::before {
-		top: -8px;
-	}
-	&::after {
-		bottom: -8px;
 	}
 }
 
 /*First*/
-
-.green {
-	color: var(--green-color);
-}
 
 main {
 	position: relative;
@@ -220,7 +65,6 @@ main {
 			left:50%;
 			transform: translate(-50%, -50%) rotate(0deg);
 			animation: rotate-small 10s linear infinite;
-	//		border: 5px solid darkcyan;
 		}
 		&::after {
 			content: url('../img/index/round-m.png');
@@ -229,7 +73,6 @@ main {
 			left:50%;
 			transform: translate(-51%, -50%) rotate(0deg);
 			animation: rotate-big 3s linear infinite;
-	//		border: 5px solid darkcyan;
 		}
 	}
 	.wrapper {
@@ -299,39 +142,6 @@ h1 {
 		width: 550px;
 		letter-spacing: 0.03375rem;
 		padding-bottom: 27px;
-	}
-}
-
-.go-btn {
-	display: flex;
-	padding: 10px 20px 10px 10px;
-	justify-content: center;
-	align-items: center;
-	gap: 10px;
-	font-size: 1.25rem;
-	border-radius: 26px;
-	letter-spacing: -0.01rem;
-	width: 212px;
-}
-
-.btn-arrow {
-	display: inline-block;
-	width: 28px;
-	height: 28px;
-	position: relative;
-	background-color: var(--black-color);
-	border-radius: 50%;
-	&::before {
-		content: '';
-		position: absolute;
-		border-top: 1px solid var(--white-color);
-		border-left: 1px solid var(--white-color);
-		z-index: 1;
-		left: 9px;
-		top: 10px;
-		width: 8px;
-		aspect-ratio: 1;
-		rotate: 135deg;
 	}
 }
 
@@ -437,18 +247,6 @@ hgroup {
 		padding-bottom: 174px;
 		margin-bottom: 107px;
 	}
-	.gallery {
-		position: relative;
-		width: 55%;
-		.image-box {
-			width: 640px;
-			aspect-ratio: 1;
-			border-radius: 20px;
-		}
-		img {
-			border-radius: 20px;
-		}
-	}
 	.text-content {
 		width: 586px;
 		color: var(--white-color);
@@ -483,71 +281,6 @@ hgroup {
 		font-weight: 600;
 		margin-bottom: 9px;
 	}
-}
-
-/*Gallery*/
-.photo-1 {
-	position: absolute;
-	transform: translate(112px, 0);
-	z-index: 9;
-	img {
-		position: relative;
-		z-index: 9;
-	}
-	&::before {
-		position: absolute;
-		content: '';
-		background: rgb(18, 18, 18, 0.2);
-		width: 100%;
-		display: block;
-		height: 100%;
-		border-radius: 20px;
-		z-index: 10;
-	}
-}
-
-.photo-2, .photo-3 {
-	position: absolute;
-	&::before {
-		position: absolute;
-		content: '';
-		background: rgb(18, 18, 18, 0.2);
-		width: 100%;
-		display: block;
-		height: 100%;
-		border-radius: 20px;
-	}
-}
-
-.photo-2 {
-	transform: translate(60px, -31px);
-	z-index: 8;
-	&::before {
-		left: 0;
-		bottom: 0;
-		z-index: 8;
-	}
-	img {
-		opacity: .5;
-		z-index: 7;
-	}
-}
-
-.photo-3 {
-	transform: translate(8px, -63px);
-	&::before {
-		left: 0;
-		bottom: 0;
-		z-index: 6;
-	}
-	img {
-		opacity: .2;
-		z-index: 5;
-	}
-}
-
-.photo {
-	transition: transform 1s ease-in-out, z-index 0.5s;
 }
 
 /*Process*/
@@ -636,27 +369,13 @@ hgroup {
 		margin-bottom: 51px;
 		margin-left: auto;
 		align-self: flex-start;
-		background: var(--black-color);
-		color: var(--white-color);
-		border: 2px solid black;
-		&::after {
-			background-color: var(--black-color);
-		}
-		&:hover {
-			color: var(--black-color);
-		}
-	}
-	.btn-arrow {
-	background-color: var(--white-color);
-		&::before {
-			border-top: 1px solid var(--black-color);
-			border-left: 1px solid var(--black-color);
-		}
 	}
 }
+
 .side {
 	width: calc(50% - 35px);
 }
+
 .project {
 	margin-bottom: 88px;
 	.image-box {
@@ -798,175 +517,6 @@ hgroup {
 	}
 }
 
-/*Footer*/
-footer {
-	background: var(--black-color);
-	color: #FFF;
-	.container {
-		padding-top: 100px;
-		padding-bottom: 60px;
-	}
-	.block {
-		display: flex;
-		justify-content: space-between;
-		gap: 105px;
-	}
-	.about {
-		width: 357px;
-		img {
-			width: 200px;
-			margin-bottom: 21px;
-		}
-	}
-	h4 {
-		font-family: "Roboto Serif", serif;
-		font-size: 1.25rem;
-		font-weight: 600;
-		margin-bottom: 24px;
-	}
-	.pages li {
-		margin-bottom: 16px;
-		font-size: 1rem;
-		letter-spacing: 0.03rem;
-	}
-	.pages li:last-child {
-		margin-bottom: 0;
-	}
-	a, a:visited {
-		color: var(--grey-color);
-	}
-	a:hover, a:active {
-		color: var(--green-color);
-	}
-}
-
-.subscribe-block {
-	width: 31%;
-	h4 {
-		margin-bottom: 17px;
-	}
-	form {
-		color: var(--text-color);
-		font-family: "DM Sans", sans-serif;
-		font-size: 1.125rem;
-		letter-spacing: 0.03375rem;
-		position: relative;
-		button {
-			position: absolute;
-			padding: 8px 15px;
-			color: var(--white-color);
-			font-family: "DM Sans", sans-serif;
-			font-size: 1.125rem;
-			letter-spacing: 0.03375rem;
-			right: 15px;
-			top: 12px;
-			border-radius: 20px;
-			background: var(--black-color);
-			border: 2px solid black;
-			display: inline-block;
-			cursor: pointer;
-			overflow: hidden;
-			z-index: 1;
-			transition: all .3s;
-		&::after {
-			content: '';
-			position: absolute;
-			bottom: 0;
-			left: 0;
-			width: 100%;
-			height: 100%;
-			background-color: var(--black-color);
-			border-radius: 10rem;
-			z-index: -2;
-		}
-		&::before {
-			content: '';
-			position: absolute;
-			bottom: 0;
-			left: 0;
-			width: 0%;
-			height: 100%;
-			background-color: var(--orange-color);
-			transition: all .3s;
-			border-radius: 10rem;
-			z-index: -1;
-		}
-		&:hover {
-			color: var(--black-color);
-		}
-		&:hover::before {
-		width: 100%;
-		}
-		&:active::before {
-			background-color: var(--dark-orange);
-		}
-	}
-}
-
-	input {
-		width: 433px;
-		padding: 10px 9px 10px 23px;
-		border-radius: 40px;
-		background: #FFF;
-		height: 67px;
-		font-family: "DM Sans", sans-serif;
-		font-size: 1.125rem;
-		&::placeholder {
-			color: var(--text-color);
-			font-family: "DM Sans", sans-serif;
-			font-size: 1.125rem;
-			letter-spacing: 0.03375rem;
-			transform: translateY(2px);
-		}
-	}	
-}
-
-.block-top {
-	padding-bottom: 101px;
-	border-bottom: 1px solid var(--grey-color);
-	margin-bottom: 29px;
-}
-
-.block-bottom {
-	h4 {
-		margin-bottom: 16px;
-	}
-	address {
-		font-style: normal;
-	}
-}
-
-.socials-list {
-	display: flex;
-	justify-content: space-between;
-	gap: 29px;
-	a {
-		display: inline-block;
-		width: 50px;
-		height: 50px;
-		border-radius: 50%;
-		background-color: var(--white-color);
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		border: 1px solid white;
-		&:hover {
-			background-color: var(--black-color);
-			transition: all .2s ease;
-			border: 1px solid white;
-			svg {
-				transition: all .2s ease;
-				filter: invert(1);
-			}
-		}
-	}
-	svg {
-		width: 23px;
-		height: 23px;
-	}
-}
-
-
 /*Media*/
 @media screen and (max-width: 1650px) {
 	.first {
@@ -1002,14 +552,9 @@ hgroup h2 + p, .recent h2 {
 		margin-inline: auto;
 	}
 }
-
-.about-us .gallery .image-box {
-		width: 500px;
-	}
 }
 
 @media screen and (max-width: 1552px) {
-
 
 main::before {
 	top: calc(1% - 40px);
@@ -1041,19 +586,6 @@ main::before {
 		}
 	}
 }
-.subscribe-block form {
-
-	input {
-		width: 100%;
-	}
-
-	button { 
-		left: 65%;
-		right: 4%;
-	}
-}
-
-
 }
 
 @media screen and (max-width: 1430px) {
@@ -1097,20 +629,7 @@ main::before {
 			border-radius: 20px;
 		}
 	}
-
-	footer .block-bottom {
-		flex-wrap: wrap;
-		gap: 20px 20%;
-		justify-content: space-between;
-		> div {
-			width: 40%;
-		}
-		.socials-list {
-			margin-right: auto;
-		}
-	}
 }
-
 
 @media screen and (max-width: 1328px) {
 
@@ -1162,7 +681,6 @@ main::before {
 		h3 {
 			align-self: center;
 			margin-left: 10px;
-
 		}
 	}
 }
@@ -1173,27 +691,11 @@ main::before {
 			padding-bottom: 80px;
 			margin-bottom: 80px;
 		}
-	
-		.gallery .image-box {
-			width: 350px;
-		}
 	}
 
 	.process hgroup {
 		margin-bottom: 0;
 	}
-
-	footer .block {
-		gap: 50px;
-	}
-
-	.subscribe-block {
-		width: 40%;
-	}
-
-	footer .block-bottom .socials-list {
-        margin-right: 20%;
-    }
 }
 
 
@@ -1253,18 +755,6 @@ main::before {
         font-size: 2.1rem;
     }
 
-	.about-us .gallery .image-box {
-		width: 300px;
-	}
-
-	.photo-2 {
-    transform: translate(77px, 35px);
-	}
-
-	.photo-3 {
-    transform: translate(45px, 69px);
-	}
-
 .review {
 	display: flex;
 	flex-wrap: wrap;
@@ -1298,35 +788,6 @@ main::before {
 		padding: 10px;
 	}
 }
-
-footer {
-	.container {
-		padding-top: 60px;
-		width: min(90%, 700px);
-	}
-	.block-top {
-		flex-wrap: wrap;
-		padding-bottom: 40px;
-		div {
-			width: 70%;
-			margin-inline: auto;
-		}
-
-		.pages {
-			display: none;
-		}
-	}
-
-	.block-bottom {
-		gap: 30px;
-		.socials-list {
-			margin-inline: auto;
-		}
-		.address {
-			display: none;
-		}
-	}
-}
 }
 
 @media screen and (max-width: 986px) {
@@ -1336,9 +797,6 @@ hgroup {
 .about-us {
 	.container {
 		padding-top: 60px;
-	}
-	.gallery {
-		display: none;
 	}
 	.text-content {
 		width: 70%;
@@ -1369,19 +827,8 @@ hgroup {
 	}
 }
 
-/*Mobbile menu*/
+/*Mobile menu*/
 @media screen and (max-width: 836px) {
-	.main-menu {
-		display: none;
-	}
-	.hamburger {
-		display: inline-block;
-	}
-
-	.buttons-block {
-		display: flex;
-		gap: 20px;
-	}
 	.partners-list {
 		flex-wrap: wrap;
 		justify-content: flex-start;
@@ -1412,59 +859,6 @@ hgroup {
 		scale: .7;
 		.projects .btn {
 		margin-top: 40px;
-		}
-	}
-}
-
-.page-shadow {
-	position: fixed;
-	left: 0;
-	top: 0;
-	background-color: rgba(#000, .7);
-	width: 100%;
-	height: 100%;
-	z-index: 999;
-	opacity: 0;
-	visibility: hidden;
-	transition: all .5s ease;
-}
-
-.mobile-panel {
-	position: fixed;
-	left: 0;
-	top: 0;
-	transform: translateX(-300px);
-	background: #fff;
-	width: 300px;
-	height: 100vh;
-	z-index: 1000;
-	transition: all .5s ease;
-	.logo {
-		scale: .6;
-		padding-top: 10px;
-	}
-}
-
-.open-mobile-menu {
-	.page-shadow {
-		opacity: 1;
-		visibility: visible;
-	}
-	.mobile-panel {
-		transform: translateX(0);
-	}
-}
-
-.mobile-menu {
-	ul {
-		padding-top: 20px;
-		li {
-			a {
-				display: inline-block;
-				padding: 10px 30px;
-				color: var(--dark-grey);
-				width: 100%;
-			}
 		}
 	}
 }
@@ -1516,13 +910,6 @@ hgroup {
 	.project {
 		margin-bottom: 40px;
 	}
-	.copyright a, .telephone a {
-		font-size: 1rem;
-	}
-
-	footer .block-top div {
-        width: 100%;
-    }
 }
 
 
@@ -1541,21 +928,6 @@ hgroup {
 }
 
 @media screen and (max-width: 442px) {
-header .buttons-block .contact-btn {
-	display: none;
-}
-
-header .logo {
-	margin-left: 20px;
-}
-
-input[type="email"]::placeholder {
-	font-size: 1rem;
-}
-
-.subscribe-block form button {
-	left: 60%;
-}
 
 .services-list {
     grid-template-columns: 1fr;
@@ -1600,14 +972,4 @@ hgroup h2 + p, .recent h2 {
 			height: 60px;
 		}
 	}
-
-    footer .block-bottom > div {
-        width: 80%;
-    }
-}
-
-@media screen and (max-width: 375px) {
-	.subscribe-block form button {
-        left: 50%;
-    }
 }
